--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="header">
         <p class="header-name">
             I'm <b>Christian Gouldy</b>,
-            <p>a Full Stack Softeware Engineer passionate about crafting innovative and impactful 
+            <p class="header-discription">a Full Stack Softeware Engineer passionate about crafting innovative and impactful 
             digital solutions that enhance user experiences and solve complex problems. 
             <br>Let's bring your ideas to life together.
             </p>
