--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
           </div>
           
-          <div class="project">
+          <div class="project" id="Projects">
             <img src="images/project-filler-image.png" class="project-image" />
 
             <div class="project-text">
